--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "nodejs",
+  "name": "middleware",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "",
+  "main": "routermiddleware.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shibin",
   "license": "ISC",
-  "keywords": [],
-  "description": "",
   "dependencies": {
+    "alert": "^5.0.12",
+    "express": "^4.18.1",
     "nodemon": "^1.3.3"
   }
 }
